<resources>
    <string name="app_name">ArbiFinder</string>

    <string name="welcome_header">Welcome to ArbiFinder !</string>
    <string name="welcome_title">Let\'s start take a look inside the application.</string>
    <string name="welcome_description">Click this button to continue.</string>

    <string name="search">Search Something…</string>
    <string name="difference">Difference</string>
    <string name="buy_from">Buy From</string>
    <string name="sell_at">Sell At</string>

    <string name="settings">Settings</string>
    <string name="trade_management">Trade Management</string>
    <string name="disable_trades">Disable Trades</string>
    <string name="disable_trades_desc">Show Disable / Offline Trades</string>
    <string name="unknown_status">Unknown Status</string>
    <string name="unknown_status_desc">Show Exchange which doesn\'t have status information.</string>
    <string name="low_volume">Low Volume</string>
    <string name="low_volume_desc_warn">_Warn_ Low Volume Trades if volume is less than :</string>
    <string name="low_volume_desc_hide">_Hide_ Low Volume Trades if volume is less than :</string>
    <string name="auto_refresh">Auto Refresh</string>
    <string name="auto_refresh_desc">Start / Stop Auto Refresh</string>
    <string name="market_management">Market Management</string>

    <string name="about">About</string>
    <string name="app_version">Version : 1.0.0</string>
    <string name="app_desc">ArbiFinder references opportunity and is for information purposes only. It is not intended to give investment advice. Please use at your own risk.</string>
    <string name="flags">Flags</string>
    <string name="transfer">Transfer</string>
    <string name="green_transfer">Convenient Trade</string>
    <string name="yellow_transfer">Coin has low volume or related Exchange status is unknown. Be Cautious!</string>
    <string name="red_transfer">Deposit or Withdrawal is disabled. Don\'t trade!</string>
    <string name="exchanges">Exchanges</string>
    <string name="exchanges_lock">Deposit or withdrawal is disable.</string>
    <string name="exchanges_warn">Deposit or withdrawal is status unknown.</string>
    <string name="exchanges_maintenance">Exchange Services are in maintenance mode.</string>

    <string name="image_welcome_page">https://i.ibb.co.com/Pt7X90T/image-splash-screen.jpg</string>

    <string name="btc">BTC</string>
    <string name="btc_desc">Show BTC Market</string>

    <string name="eth">ETH</string>
    <string name="eth_desc">Show ETH Market</string>

    <string name="usdt">USDT</string>
    <string name="usdt_desc">Show USDT Market</string>

    <string name="exchange_management">Exchange Management</string>

    <string name="binance">Binance</string>
    <string name="binance_desc">Show Binance Trade Data</string>

    <string name="bitfinex">Bitfinex</string>
    <string name="bitfinex_desc">Show Bitfinex Trade Data</string>

    <string name="bitflyer">bitFlyer</string>
    <string name="bitflyer_desc">Show bitFlyer Trade Data</string>

    <string name="hitbtc">HitBTC</string>
    <string name="hitbtc_desc">Show HitBTC Trade Data</string>

    <string name="indodax">Indodax</string>
    <string name="indodax_desc">Show Indodax Trade Data</string>

    <string name="kucoin">Kucoin</string>
    <string name="kucoin_desc">Show Kucoin Trade Data</string>

    <string name="persen">0.02</string>
    <string name="eth_btc">ETH/BTC</string>

    <string name="buy_from_value">0.04870000</string>
    <string name="vol">vol: </string>
    <string name="vol_buy_from_value">214.6042</string>

    <string name="sell_at_value">0.04871000</string>
    <string name="vol_sell_at_value">40.6042</string>

    <string name="val_low_volume">0.0</string>
    <string name="val_auto_refresh">10s</string>

    <string name="auto_refresh_data">Auto Refresh Data</string>

    <string name="how_to_use_app">More Informations</string>
    <string name="tutorial">Info App</string>

    <string name="next">Next</string>
    <string name="prev">Prev</string>
    <string name="close">Close</string>

    <style name="TransparentDialogTheme" parent="Theme.AppCompat.Light.Dialog">
        <item name="android:windowBackground">@android:color/transparent</item>
        <item name="android:windowIsFloating">true</item>
        <item name="android:windowNoTitle">true</item>
        <item name="android:windowIsTranslucent">true</item>
    </style>

    <string name="profile_risk">Profile Risk</string>
    <string name="user_profile_risk">User Profile Risk</string>
    <string name="user_profile_risk_desc">Choose Your Profile Risk</string>
    <string name="custom">Custom</string>
    <string name="high_risk">High Risk</string>
    <string name="low_risk">Low Risk</string>

    <string-array name="user_profile_risk_options">
        <item>Custom</item>
        <item>Low Risk</item>
        <item>High Risk</item>
    </string-array>


    <string name="ai_advice_for_you">Gemini AI advice for you :</string>
    <string name="ai_advice_content">Be grateful for everything you have today.</string>
    <string name="date">Date</string>
    <string name="symbol">Symbol</string>
    <string name="buy_price">Buy Price</string>
    <string name="sell_price">Sell Price</string>
    <string name="amount">Amount</string>
    <string name="pnl">PnL</string>
    <string name="buy_price_in_usdt">Buy Price (in USDT)</string>
    <string name="sell_price_in_usdt">Sell Price (in USDT)</string>
    <string name="amount_in_usdt">Amount (in USDT)</string>
    <string name="pnl_profit_and_loss">PnL (Profit and Loss)</string>

    <string name="date_calendar">11/12/2024</string>
    <string name="btcusdt">BTCUSDT</string>
    <string name="buy_price_value">500</string>
    <string name="sell_price_value">550</string>
    <string name="amount_value">480</string>
    <string name="pnl_value">0.20</string>

    <string name="comment">Comment : </string>
    <string name="comment2">Comment</string>
    <string name="submit">Submit</string>
    <string name="comment_content">"Perfect timing to buy."</string>
    <string name="trading_journal">Trading Journal</string>

    <string name="team_member">Team Members</string>

    <string name="nama_hafidz">Ahmad Hafidz</string>
    <string name="nim_hafidz">2602185721</string>

    <string name="nama_brian">Brian Marcellino</string>
    <string name="nim_brian">2602185684</string>

    <string name="nama_raihan">Muh. Hafizh Raihan</string>
    <string name="nim_raihan">2602183426</string>

    <string name="nama_hilmi">Nasywa Hilmi C.</string>
    <string name="nim_hilmi">2602185690</string>

    <string name="nama_odit">Oditya Ridho D.</string>
    <string name="nim_odit">2602217225</string>

</resources>