<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_jungle_green"
    tools:context=".AboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="8dp"
            android:background="@drawable/rounded_corners"
            android:orientation="horizontal"
            android:padding="16dp"
            tools:ignore="RtlHardcoded">

            <TextView
                style="@style/TitleTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/about"
                android:textColor="@color/mercury" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/arbitrade_logo"
                    tools:ignore="ContentDescription" />

                <TextView
                    style="@style/DescriptionBoldTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="32dp"
                    android:gravity="center"
                    android:text="@string/app_version"
                    android:textColor="@color/mercury" />

                <TextView
                    style="@style/DescriptionRegularTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="32dp"
                    android:gravity="center"
                    android:text="@string/app_desc"
                    android:textColor="@color/mercury" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginBottom="32dp"
                    android:background="@color/gunmetal" />

                <TextView
                    style="@style/DescriptionBoldTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginBottom="16dp"
                    android:gravity="center"
                    android:text="@string/flags"
                    android:textColor="@color/mercury" />

                <TextView
                    style="@style/DescriptionBoldTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="left"
                    android:text="@string/transfer"
                    android:textColor="@color/mercury"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    style="@style/DescriptionRegularTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginBottom="8dp"
                    android:drawableStart="@drawable/green_circle"
                    android:drawablePadding="16dp"
                    android:gravity="left"
                    android:text="@string/green_transfer"
                    android:textColor="@color/mercury"
                    tools:ignore="RtlHardcoded,UseCompatTextViewDrawableXml" />

                <TextView
                    style="@style/DescriptionRegularTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginBottom="32dp"
                    android:drawableStart="@drawable/yellow_circle"
                    android:drawablePadding="16dp"
                    android:gravity="left"
                    android:text="@string/yellow_transfer"
                    android:textColor="@color/mercury"
                    tools:ignore="RtlHardcoded,UseCompatTextViewDrawableXml" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginBottom="32dp"
                    android:background="@color/gunmetal" />

                <TextView
                    style="@style/DescriptionBoldTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginBottom="16dp"
                    android:gravity="center"
                    android:text="@string/how_to_use_app"
                    android:textColor="@color/mercury" />


                <Button
                    android:id="@+id/tutorialBtn"
                    style="@style/DescriptionBoldTextStyle"
                    android:layout_width="135dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginBottom="32dp"
                    android:background="@drawable/rounded_corners"
                    android:drawableStart="@drawable/question_icon"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/tutorial"
                    android:textColor="@color/mercury" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginBottom="32dp"
                    android:background="@color/gunmetal" />

                <TextView
                    style="@style/DescriptionBoldTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginBottom="16dp"
                    android:gravity="center"
                    android:text="@string/team_member"
                    android:textColor="@color/mercury" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <!-- Baris 1 -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:layout_marginBottom="24dp">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_weight="1"
                            android:gravity="center">

                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_marginBottom="16dp"
                                android:src="@drawable/profile_hafidz" />

                            <TextView
                                style="@style/DescriptionBoldTextStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/nama_hafidz"
                                android:textColor="@color/mercury" />

                            <TextView
                                style="@style/DescriptionRegularTextStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/nim_hafidz"
                                android:textColor="@color/mercury" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_weight="1"
                            android:gravity="center">

                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_marginBottom="16dp"
                                android:src="@drawable/profile_brian" />

                            <TextView
                                style="@style/DescriptionBoldTextStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/nama_brian"
                                android:textColor="@color/mercury" />

                            <TextView
                                style="@style/DescriptionRegularTextStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/nim_brian"
                                android:textColor="@color/mercury" />
                        </LinearLayout>
                    </LinearLayout>

                    <!-- Baris 2 -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:layout_marginBottom="24dp">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_weight="1"
                            android:gravity="center">

                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_marginBottom="16dp"
                                android:src="@drawable/profile_raihan" />

                            <TextView
                                style="@style/DescriptionBoldTextStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/nama_raihan"
                                android:textColor="@color/mercury" />

                            <TextView
                                style="@style/DescriptionRegularTextStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/nim_raihan"
                                android:textColor="@color/mercury" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_marginBottom="16dp"
                                android:src="@drawable/profile_hilmi" />

                            <TextView
                                style="@style/DescriptionBoldTextStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/nama_hilmi"
                                android:textColor="@color/mercury" />

                            <TextView
                                style="@style/DescriptionRegularTextStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/nim_hilmi"
                                android:textColor="@color/mercury" />
                        </LinearLayout>
                    </LinearLayout>

                    <!-- Baris 3 -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:layout_marginBottom="24dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:gravity="center">

                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_marginBottom="16dp"
                                android:src="@drawable/profile_odit" />

                            <TextView
                                style="@style/DescriptionBoldTextStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/nama_odit"
                                android:textColor="@color/mercury" />

                            <TextView
                                style="@style/DescriptionRegularTextStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/nim_odit"
                                android:textColor="@color/mercury" />
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="150dp" />
            </LinearLayout>


        </ScrollView>
    </LinearLayout>

</RelativeLayout>