<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/dark">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- ScrollView must have only one child -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="300dp">

                <ImageView
                    android:id="@+id/image_welcome_page"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/gradient" />
            </FrameLayout>

            <TextView
                style="@style/HeaderTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_header"
                android:textColor="@color/mercury"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp" />

            <TextView
                style="@style/TitleTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_title"
                android:textColor="@color/mercury"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp" />

            <TextView
                style="@style/DescriptionRegularTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_description"
                android:textColor="@color/mercury"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="40dp" />

            <FrameLayout
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal">

                <Button
                    android:id="@+id/btn_next"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_arrow_right" />

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center"
                    android:src="@drawable/button_circle"
                    tools:ignore="ContentDescription" />
            </FrameLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
